--- a/index.html
+++ b/index.html
@@ -25,8 +25,41 @@
             <h2 id="uv-index"></h2>
             <h2></h2>
             </div>
-            <div>
+            <div class="row">
             <!-- 5 day forcast -->
+            <div class="col">
+            <h1>5-Day Forecast:</h1>
+            <div id="day-one" class="col-2 badge badge-primary">
+                <h2 id="date-day-one"></h2>
+                <img id="icon-day-one">
+                <h2 id="temperature-day-one"></h2>
+                <h2 id="humidity-day-one"></h2>
+            </div>
+            <div id="day-two">
+                <h2 id="date-day-two"></h2>
+                <h2 id="icon-day-two"></h2>
+                <h2 id="temperature-day-two"></h2>
+                <h2 id="humidity-day-two"></h2>
+            </div>
+            <div id="day-three">
+                <h2 id="date-day-three"></h2>
+                <h2 id="icon-day-three"></h2>
+                <h2 id="temperature-day-three"></h2>
+                <h2 id="humidity-day-three"></h2>
+            </div>
+            <div id="day-four">
+                <h2 id="date-day-four"></h2>
+                <h2 id="icon-day-four"></h2>
+                <h2 id="temperature-day-four"></h2>
+                <h2 id="humidity-day-four"></h2>
+            </div>
+            <div id="day-five">
+                <h2 id="date-day-five"></h2>
+                <h2 id="icon-day-five"></h2>
+                <h2 id="temperature-day-five"></h2>
+                <h2 id="humidity-day-five"></h2>
+            </div>
+            </div>
             </div>
             
         </main>
