--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <input type="text" id="city-search-input" class="form-control" placeholder="Seattle" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-primary btn-outline-secondary" type="button" id="city-search-button">
+                            <!-- Bootstrap search icon -->
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
                             <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
@@ -51,10 +52,10 @@
                     <!-- a jumbosized area will show the city name, todays date, and weather information -->
                     <h3 id="city-name"></h3>
                     <span><img id="icon"/></span>
-                    <h6 id="temperature"></h6>
-                    <h6 id="humidity"></h6>
-                    <h6 id="wind-speed"></h6>
-                    <h6 id="uv-index"></h6>
+                    <h4 id="temperature"></h4>
+                    <h4 id="humidity"></h4>
+                    <h4 id="wind-speed"></h4>
+                    <h4 id="uv-index"></h4>
                 </div>
             <div class="row">
                 <div class="col">
@@ -63,32 +64,32 @@
             </div>
             <div class="row">
                 <!-- 5 day forecast -->
-                <div class="col-md-12 d-flex justify-content-sm-between" id="forecast">
-                <div id="day1" class="col-2 badge badge-primary p-2 m-2">
+                <div class="col-md-12" id="forecast">
+                <div id="day1" class="col-md-2 badge badge-primary p-2 m-2">
                     <h6 id="date-day1"></h6>
                     <img id="icon-day1">
                     <h6 id="temperature-day1"></h6>
                     <h6 id="humidity-day1"></h6>
                 </div>
-                <div id="day2" class="col-2 badge badge-primary p-2 m-2">
+                <div id="day2" class="col-md-2 badge badge-primary p-2 m-2">
                     <h6 id="date-day2"></h6>
                     <img id="icon-day2">
                     <h6 id="temperature-day2"></h6>
                     <h6 id="humidity-day2"></h6>
                 </div>
-                <div id="day3" class="col-2 badge badge-primary p-2 m-2">
+                <div id="day3" class="col-md-2 badge badge-primary p-2 m-2">
                     <h6 id="date-day3"></h6>
                     <img id="icon-day3">
                     <h6 id="temperature-day3"></h6>
                     <h6 id="humidity-day3"></h6>
                 </div>
-                <div id="day4" class="col-2 badge badge-primary p-2 m-2">
+                <div id="day4" class="col-md-2 badge badge-primary p-2 m-2">
                     <h6 id="date-day4"></h6>
                     <img id="icon-day4">
                     <h6 id="temperature-day4"></h6>
                     <h6 id="humidity-day4"></h6>
                 </div>
-                <div id="day5" class="col-2 badge badge-primary p-2 m-2">
+                <div id="day5" class="col-md-2 badge badge-primary p-2 m-2">
                     <h6 id="date-day5"></h6>
                     <img id="icon-day5">
                     <h6 id="temperature-day5"></h6>
